// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MotivationHook should match snapshot for valid and fallback: fallback-motivation-hook 1`] = `
{
  "_meta": {
    "allFields": [
      "business_type",
      "primary_goal",
      "tone",
      "challenges",
      "motivator",
      "spark_feel_quote",
    ],
    "conflictDetected": false,
    "emotionalAnchorPresent": true,
    "errors": [],
    "fallbackSummary": "",
    "hasMotivationHook": false,
    "injectedFields": [
      "spark_feel_quote",
    ],
    "intentConfidence": 0.95,
    "usedSparkSignal": true,
    "usedVisionCatcher": false,
    "validationPassed": true,
  },
  "business_type": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "SaaS",
    "wasConfirmed": true,
  },
  "challenges": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": [
      "competition",
    ],
    "wasConfirmed": true,
  },
  "motivator": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "impact",
    "wasConfirmed": true,
  },
  "primary_goal": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "Grow users",
    "wasConfirmed": true,
  },
  "tone": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "professional",
    "wasConfirmed": true,
  },
}
`;

exports[`MotivationHook should match snapshot for valid and fallback: valid-motivation-hook 1`] = `
{
  "_meta": {
    "allFields": [
      "business_type",
      "primary_goal",
      "tone",
      "challenges",
      "motivator",
      "spark_feel_quote",
    ],
    "conflictDetected": false,
    "emotionalAnchorPresent": true,
    "errors": [],
    "fallbackSummary": "",
    "hasMotivationHook": true,
    "injectedFields": [
      "spark_feel_quote",
    ],
    "intentConfidence": 0.95,
    "usedSparkSignal": true,
    "usedVisionCatcher": false,
    "validationPassed": true,
  },
  "business_type": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "SaaS",
    "wasConfirmed": true,
  },
  "challenges": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": [
      "competition",
    ],
    "wasConfirmed": true,
  },
  "motivationHook": {
    "confidence": 1,
    "errorState": false,
    "overrideable": false,
    "source": "spark",
    "value": "Inspire your team to greatness.",
    "wasConfirmed": false,
  },
  "motivator": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "impact",
    "wasConfirmed": true,
  },
  "primary_goal": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "Grow users",
    "wasConfirmed": true,
  },
  "spark_feel_quote": {
    "confidence": 1,
    "errorState": false,
    "overrideable": false,
    "source": "spark",
    "value": "Inspire your team to greatness",
    "wasConfirmed": false,
  },
  "tone": {
    "confidence": 0.95,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "professional",
    "wasConfirmed": true,
  },
}
`;
